--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
     font-family: "Open Sans", helvetica, arial, sans-serif;
     font-size: 16px;
     height: 100%;
-    background-image: url(../images/witewall_3.PNG)
+    background-image: url(../images/witewall_3.png)
 }
 
 #wrapper {
