--- a/components/1/component.html
+++ b/components/1/component.html
@@ -8,28 +8,18 @@
 <body>
 
 	<!-- Component -->
+    
     <nav>
-        <h1>OFFICE FOR RENT</h1>
+        <img src="http://placehold.it/200x55" alt="Company Logo">
         <ul>
-            <li>Home</li>
             <li>About</li>
-            <ul>
-                <li>Articles</li>
-                <li>History</li>
-                <ul>
-                    <li>Lorem</li>
-                    <li>Dolor</li>
-                    <li>Sit amet</li>
-                </ul>
-                <li>Offers</li>
-            </ul>
-            <li>Offices</li>
+            <li>Projects</li>
             <li>Services</li>
-            <li>News</li>
-            <li>Contacts</li>
+            <li>Blog</li>
+            <li>Contact</li>
         </ul>
     </nav>
-    <img src="http://placehold.it/960x200" alt="Image" height="100%" width="100%">
+    
 	<!-- End Component -->
 	
 </body>
