--- a/components/10/component.html
+++ b/components/10/component.html
@@ -8,29 +8,22 @@
 <body>
 
 	<!-- Component -->
-    <div id="whatsHappening">
-        <img src="http://placehold.it/32x32" alt="Image" width="32" height="32">
-        <form>
-            <input type="text" name="status" placeholder="What's Happening&#63;">
-        </form>
-    </div>
-    
-    <div>
-        <img src="http://placehold.it/48x48" alt="Image" width="48" height="48">
-        <h3>Gizmodo</h3>
-        <p>If we're going to do celebrity <a href="#">#DroughtShaming</a> let's do it right <a href="#">gizmo.do/llzlEfg</a></p>
-        <img src="http://placehold.it/500x300" alt="Image" width="50%" height="50%">
-    </div>
-	
-    <div id="buttons">
-        <input type="image" name="Reply" src="http://placehold.it/16x16" alt="" width="16" height="16">
-        <input type="image" name="Retweet" src="http://placehold.it/16x16" alt="" width="16" height="16">
-        <input type="image" name="Favorite" src="http://placehold.it/16x16" alt="" width="16" height="16">
-        <input type="image" name="More" src="http://placehold.it/16x16" alt="" width="16" height="16">
-        <a href="#">View photo</a>
-    </div>
+    <div class="wrapper">
+        <footer>
+            <ul>
+                <li><a href="#"><img src="http://placehold.it/90x90" alt="Twitter"></a></li>
+                <li><a href="#"><img src="http://placehold.it/90x90" alt="Facebook"></a></li>
+                <li><a href="#"><img src="http://placehold.it/90x90" alt="Rdio"></a></li>
+                <li><a href="#"><img src="http://placehold.it/90x90" alt="Dribble"></a></li>
+                <li><a href="#"><img src="http://placehold.it/90x90" alt="Instagram"></a></li>
+            </ul>
+        </footer>
 
-	<!-- End Component -->
+        <footer style="border-top: 1px solid #ccc">
+            <p>Proudly producing from the Midwest.</p>
+        </footer>   
+    </div>
+    <!-- End Component -->
 	
 </body>
 </html>
