--- a/components/2/component.html
+++ b/components/2/component.html
@@ -8,23 +8,35 @@
 <body>
 
 	<!-- Component -->
+    
+    <div class="wrapper">
+        <article>
+            <img src="http://placehold.it/80x80" alt="Credit card with square">
+            <h5>Accept credit cards anywhere</h5>
+            <p>The free Square Reader works with the free Square Register app to allow everyone to take payments on their smartphone or tablet.</p>
+        </article>
 
-	<div class="cta">
-        <h1>MANLY GOODS WHEN YOU NEED THEM</h1>
-        <h2>Men's underwear, socks, razors, condoms and more.</h2>
-        <h3>Awesome Gear. One-click Shipments. No BS Returns.</h3>
-        <form>
-            <input type="email" name="email" placeholder="Email Address">
-            <button>Get Started</button>
-            <div>
-                <p>or</p>
-                <a href="https://www.facebook.com/dialog/oauth?client_id=107258832672929&redirect_uri=https%3A%2F%2Fwww.manpacks.com%2Ffb%2Fverify&state=2e1c2853b5ad76a270a83eb0383c11c9&sdk=php-sdk-3.2.3&scope=email">Connect With Facebook</a>
-            </div>
-            <div>Join 1000's of men already signed up</div>
-        </form>
-        <p>As seen on Forbes, MensHealth, Inc., Thrillist, The Awesome, Techcrunch, Mashable</p>
+        <article>
+            <img src="http://placehold.it/80x80" alt="iOS and Android Phone">
+            <h5>Works with iOS and Android</h5>
+            <p>Square Reader plugs into the standard headset jack of your smartphone or tablet. Never miss a sale again.</p>
+        </article>
+
+        <article>
+            <img src="http://placehold.it/80x80" alt="Lock">
+            <h5>Serious security</h5>
+            <p>Card information is encrypted at the moment of swipe. Square doesn’t store data on your device after a payment has been processed.</p>
+            <!-- Will add arrow using CSS -->
+            <a href="#">Learn About Security</a>
+        </article>
+
+        <article>
+            <img src="http://placehold.it/80x80" alt="Pay 2.75">
+            <h5>Clear pricing, fast deposits</h5>
+            <p>Pay 2.75&#37; per swipe for Visa, MasterCard, Discover, and American Express. Swipe &#36;100, see &#36;97.25 in your bank account in one to two business days.</p>
+        </article>
     </div>
-
+    
 	<!-- End Component -->
 	
 </body>
