--- a/components/3/component.html
+++ b/components/3/component.html
@@ -9,57 +9,49 @@
 
 	<!-- Component -->
     <article>
-        <div>
-            <img src="http://placehold.it/72x72" alt="Image">
-        </div>
-        <h2>
-            <span>GLOBAL</span>
-            <span>BUSINESS</span>
-            <span>GUIDE</span>
-        </h2>
-        <p>Nertasse ritiasertas leryarse asety kertya aset aplicberafaes kertyu ersvitae fasea deo.</p>
-        <a href="#">More</a>
-    </article>
-	
-    <article>
-        <div>
-            <img src="http://placehold.it/72x72" alt="Image">
-        </div>
-        <h2>
-            <span>FAST</span>
-            <span>ONLINE</span>
-            <span>SUPPORT</span>
-        </h2>
-        <p>Dasertas leryars bertasse ritis asety kertya aset aplicberafaes kertyu ersvitae fasea deo.</p>
-        <a href="#">More</a>
+        <img src="http://placehold.it/500x500" alt="Person 1">
+        <div class="tint"></div>
+        <section class="name">
+            <h3>Ryan Vanni</h3>
+            <h4>CEO &#47; Founder</h4>
+        </section>
+        <hr>
+        <section class="links">
+            <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
+            <a href="#" title="instagram"><img src="http://placehold.it/50x50" alt="Instagram Icon"></a>
+            <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
+        </section>
     </article>
     
     <article>
-        <div>
-            <img src="http://placehold.it/72x72" alt="Image">
-        </div>
-        <h2>
-            <span>PRO</span>
-            <span>SERVICES</span>
-            <span>&#38; ADVICE</span>
-        </h2>
-        <p>Kertasse riti masertas leryars asety kertya aset aplicberafaes kertyu ersvitae fasea deo.</p>
-        <a href="#">More</a>
+        <img src="http://placehold.it/500x500" alt="Person 2">
+        <div class="tint"></div>
+        <section class="name">
+            <h3>Robert Reinhard</h3>
+            <h4>CTO</h4>
+        </section>
+        <hr>
+        <section class="links">
+            <a href="#" title="facebook"><img src="http://placehold.it/50x50" alt="Facebook Icon"></a>
+            <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
+            <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
+            <a href="#" title="github"><img src="http://placehold.it/50x50" alt="Github Icon"></a>
+        </section>
     </article>
     
     <article>
-        <div>
-            <img src="http://placehold.it/72x72" alt="Image">
-        </div>
-        <h2>
-            <span>FRESH</span>
-            <span>BUSINESS</span>
-            <span>IDEAS</span>
-        </h2>
-        <p>Masertas leryars ntrasades asety kertya aset aplicberafaes kertyu ersvitae fasea deo.</p>
-        <a href="#">More</a>
+        <img src="http://placehold.it/500x500" alt="Person 3">
+        <div class="tint"></div>
+        <section class="name">
+            <h3>Jeff Toll</h3>
+            <h4>Creative Director</h4>
+        </section>
+        <hr>
+        <section class="links">
+            <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
+            <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
+        </section>
     </article>
-
 	<!-- End Component -->
 	
 </body>
