--- a/components/4/component.html
+++ b/components/4/component.html
@@ -8,49 +8,20 @@
 <body>
 
 	<!-- Component -->
-    <div>
-        <h2>People</h2>
-        <ul>
-            <li>
-                <a href="#">
-                    <!-- I plan on using canvas to create the rounded picture display -->
-                    <img src="http://placehold.it/160x160" alt="Image">
-                    <p>
-                        <em>Tom Adamski</em>
-                        <span>Chief Executive Officer, Razorfish Global</span>
-                    </p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="http://placehold.it/160x160" alt="Image">
-                    <p>
-                        <em>Ariel Marciano</em>
-                        <span>Chief Financial Officer, Razorfish Global</span>
-                    </p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="http://placehold.it/160x160" alt="Image">
-                    <p>
-                        <em>Ray Velez</em>
-                        <span>Chief Technology Officer, Razorfish Global</span>
-                    </p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="http://placehold.it/160x160" alt="Image">
-                    <p>
-                        <em>Daniel Bonner</em>
-                        <span>Chief Creative Officer, Razorfish Global</span>
-                    </p>
-                </a>
-            </li>
-        </ul>
+    
+    <div class="wrapper">
+        <img src="http://placehold.it/500x500" alt="Dog">
+        <h2>Keep Playing</h2>
+        <p>&#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211;</p>
+        <p>&#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211;</p>
+        <h1>Hip &#38; Joint</h1>
+        <p>Support Healthy Hip &#38; Joint Function</p>
+        <h3>100&#37; USA sourced.</h3>
+        <p>&#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211;</p>
+        <p>&#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211; &#8211;</p>
+        <img src="http://placehold.it/200x200" alt="Product Image">
+        <a href="#">Purchase Now</a>
     </div>
-	
 
 	<!-- End Component -->
 	
