--- a/components/5/component.html
+++ b/components/5/component.html
@@ -4,64 +4,33 @@
 	<title>WSP Component: Shelby Foegelle</title>
 	<!--<link rel="stylesheet" type="text/css" href="../../css/reset.css" />-->
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
 
 	<!-- Component -->
-    <h1>Resetting Agency Culture</h1>
-	<p>
-        by
-        <a href="#">Justin Dauer</a>
-        <time class="pubdate updated" datetime="2015-06-02T10:00:00-04:00">June 02, 2015</time><br>
-        <span>
-            Published in
-            <a href="#">Business</a>
-            , 
-            <a href="#">Industry</a>
-            · 
-            <a href="#">10 Comments</a>
-        </span>
-    </p>
-    <p>The internet is full of stories of “dream” agency environments: Google’s “sleep pods,” Yelp’s KegMate, this place’s air hockey table, that joint’s Zen rock garden. They read well in viral articles intended to induce cognitive salivation—the 3 p.m. cubicle fatigue equivalent of a SkyMall Bigfoot Garden Yeti statue while flying coach.</p>
-    <aside>
-        <div>
-            <h4>Illustration:</h4>
-            <ul>
-                <li><a href="#">Dougal MacPherson</a></li>
-            </ul>
-        </div>
-        <div>
-            <h4>Share this:</h4>
-            <ul>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Google&#43;</a></li>
-            </ul>
-        </div>
-    </aside>
-    <p>But the truth is this: there’s so much more to fostering investment and growth in our team members than gimmicky perks. A true dream office, then, is one that invests deeply in the success of its employees.</p>
-    <p>While “investment” is often contextualized via finance-centric terminology, the way it anchors a healthy agency culture cannot be trivialized. Agency culture is the result of many factors and influences, but a healthy environment is one that encourages team members to speak up; that fosters inspiration through collective brainstorming and problem-solving; that doesn’t micro-analyze the way time is spent; and that enables employees to listen to and learn from one another.</p>
-    <p>Sadly, many agencies support a model that’s more about draining workers of every available bit of brainpower. A team member is hired to work and contribute, clearly, but not at the expense of being devalued or dehumanized. Employees are not the equivalent of a dust-bunny-gobbling Roomba, careening from point A to point B with little to no direction. Thoughtful changes in approach—from the way people are brought into the team, to the approach to creativity and communication, to the support for professional development—can make a big difference in employees’ happiness and dedication.</p>
-    <h2>The new Day One</h2>
-    <p>With new hires, many agencies operate under the “jump right into it” methodology; I’m sure most of us have experienced this at some point in our own careers. On Monday, we commute into the new office, are greeted by a terse “Welcome” and a handshake, then get seated at a workstation and immediately lobbed into a project. But by then, the grandest of opportunities toward employee investment—acclimating them as a human rather than as a “worker”—has already been lost.</p>
-    <p>To prevent that, I’ve created a different kind of onboarding experience at my agency, Nansen. We begin Day One on a Friday, and use the following process for new design hires (though with some adjustments, the experience can apply to any role):</p>
-    <h3>ACCLIMATION</h3>
-    <p>The first half of the day is setup: coworker meet-and-greets, personalizing and configuring their laptop for their own level of comfort, and working with the appropriate team members to secure licenses and install the tools they need.</p>
-    <h3>CONVERSATION</h3>
-    <p>The day in the office proper effectively ends around noon. Over an off-site lunch, there’s conversation: on design, on creative inspiration, on how our team functions within the organization, on current and future projects. The clock isn’t watched, judgy gazes aren’t cast, and implications of seniority or hierarchy are left off the table. Taking a team member out to lunch on their first day isn’t rocket science; how they’re engaged (constructive dialogue versus cell phone tunnel vision) is where we see the most value.</p>
-    <h3>INSPIRATION</h3>
-    <p>With questions answered, there’s only one expectation for the day: we make a visit to anywhere in the city that inspires the designer. While the role is contextualized by digital endeavors, inspiration has no such limitations. For some, it might take the form of Chicago architecture; for others, a museum’s collection. Understanding what has influenced them creatively, then, provides insight into their approach to visual communication that exceeds what folio work can yield.</p>
-    <h3>REFLECTION</h3>
-    <p>By this point, a first day of copious amounts of healthy discussion (and coffee, and walking) has served to establish a tone of humanized dialogue. By the business clock there’s typically not much time remaining; as such, the remainder of the day and weekend can be taken for thought and reflection on what was, very likely, a first day unlike any other previously experienced.</p>
-    <p>Monday, then, remains the day to begin client and project understanding and familiarity. Now serving as Day Two, it has been prefaced by a tangible and immersive demonstration of how their thoughts and voice are valued, and how the creative team functions. While some of the day can be adjusted or tweaked per the role being filled, this process demonstrates our agency culture and fosters mutual respect and appreciation.</p>
-    <footer>
-        <h3>About the Author</h3>
-        <div>
-            <a href="#"><img src="http://placehold.it/120x120"></a>
-            <h4><a href="#">Justin Dauer</a></h4>
-            <p>Justin Dauer is a passionate user advocate, designer, writer, and skinny denim elitist with a penchant for pixels. When he’s not directing creative initiatives at Nansen, his personal creative outlet is pseudoroom, the same moniker by which he tweets. He eats a bowl of cereal every night before bed. Every. Night.</p>
-        </div>
-    </footer>
+    
+    <article>
+        <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
+        <form>
+            First Name &#42;<br>
+            <input type="text" name="firstName"><br>
+            
+            Last Name &#42;<br>
+            <input type="text" name="lastName"><br>
+            
+            Email Address &#42;<br>
+            <input type="email" name="emailAddress"><br>
+            
+            Message &#42;<br>
+            <textarea cols="40" rows="10" name="message"></textarea><br>
+            
+            <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
+            
+            <button type="submit" value="Send Message">Send Message</button>
+        </form>
+    </article>
+    
 	<!-- End Component -->
 	
 </body>
