--- a/components/6/component.html
+++ b/components/6/component.html
@@ -8,30 +8,27 @@
 <body>
 
 	<!-- Component -->
-    <h1>Contact</h1>
-	<span></span><!-- span to place the bowtie -->
-    <div id="contactLeft">
-        <div id="contactLeft1">
-            <span>E-Mail:</span>
-            <p>bnsg@billnye.com</p>
-            <span>Or Write:</span>
-            <p>Nye Labs, LLC<br>Bill Nye The Science Guy<br>4742 42nd Avenue SW, #143<br>Seattle, WA 98116</p>
-        </div>
-        <div id="contactLeft2">
-            <span>For media and press requests please contact:</span>
-            <p>Glenn Schwartz - Cyberlaff Inc.<br>818-224-2990<br>glenn.schwartz@icloud.com</p>
-        </div>
+    <header style="border-bottom: 1px solid #555;">
+        <h1><a href="#">PoshCSS</a></h1>
+        <h2>For the Modern Day Web Designer</h2>
+    </header>
+    
+    <div class="wrapper" style="border-top: 1px solid #555;">
+        <article style="border-bottom: 1px dashed #bbb;">
+            <h3><a href="#">Spiffing CSS</a></h3>
+            <p><a href="#">&#35;</a> Linked to 7 April 2012 in by Pat Dryburgh</p>
+            <blockquote>Brits, take control of the web. Spiffing allows you to write your CSS and stylesheets in conformance to proper British English (also known as correct English) grammar and spelling regulations.</blockquote>
+            <a href="#">Read more at spiffingcss.com →</a>
+        </article>
+        
+        <article style="border-bottom: 1px dashed #bbb;">
+            <h3><a href="#">Pixel Perfect Tracking and Alignment</a></h3>
+            <p><a href="#">&#35;</a> Linked to 11 March 2012 in <a href="#">Code</a> by Pat Dryburgh</p>
+            <blockquote>When you open up your tracking, the text will always push out to the right as letter-spacing is applied from the left. As a result, if you’re centering your type, it will be a few pixels further to the right than it should be. <br><br>Taking care of this is simple, but easily overlooked. Just add a negative left margin that is equal to the value you assigned for letter-spacing..</blockquote>
+            <a href="#">Read more at spiffingcss.com →</a>
+        </article>
     </div>
-    <div id="contactRight">
-        <div id="contactRight1">
-            <span>For personal appearances &#38; speaking:</span>
-            <p>Nick Pampenella<br>nickpampenella@theagencygroup.com<br><br>The Agency Group<br>142 W 57th Street, 6th Floor New York, NY 10019<br>212-581-3100<br>www.theagencygroup.com</p>
-        </div>
-        <div id="contactRight2">
-            <span>For general inquires please contact</span>
-            <p>Christine Sposari<br>Assistant to Mr. Nye<br>bnsg@billnye.com</p>
-        </div>
-    </div>
+        
 	<!-- End Component -->
 	
 </body>
