--- a/components/7/component.html
+++ b/components/7/component.html
@@ -8,14 +8,30 @@
 <body>
 
 	<!-- Component -->
-    <h1>tumblr.</h1>
+    
+    <img src="http://placehold.it/150x150" alt="Mailchimp">
+    
     <form>
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <button>Log In</button>
+        Username
+        <a href="#">I forgot</a><br>
+        <input type="text" name="username" placeholder="&#42;">
+        <br>Password
+        <a href="#">I forgot</a><br>
+        <input type="password" name="password" placeholder="&#42;">
+        <label for="showPassword">
+            <input type="checkbox" name="showPassword" id="showPassword">
+            Show
+        </label>
+        <br>
+        <button type="submit" value="log in">Log In</button>
+        <label for="stayLoggedIn">
+            <input type="checkbox" name="stayLoggedIn" id="stayLoggedIn">
+            Stay logged in
+        </label><br>
+        <a href="#">Create an account</a>
+        &#183;
+        <a href="#">Trouble logging in?</a>
     </form>
-    <a href="#">Forgot your password?</a>
-	
 
 	<!-- End Component -->
 	
