--- a/components/8/component.html
+++ b/components/8/component.html
@@ -8,30 +8,19 @@
 <body>
 
 	<!-- Component -->
-    <footer>
-        <div id="footerNav">
-            <div id="socialMedia">
-                <a href="#"><img src="https://nationallgbtmuseum.org/wp-content/themes/Velvet/images/footerFacebook.jpg" alt="Facebook" width="20" height="20"></a>
-                <a href="#"><img src="https://nationallgbtmuseum.org/wp-content/themes/Velvet/images/footerTwitter.jpg" alt="Twitter" width="20" height="20"></a>
-                <a href="#"><img src="https://nationallgbtmuseum.org/wp-content/themes/Velvet/images/footerGooglePlus.jpg" alt="GooglePlus" width="20" height="20"></a>
-                <a href="#"><img src="https://nationallgbtmuseum.org/wp-content/themes/Velvet/images/footerEmail.jpg" alt="Email" width="20" height="20"></a>
-            </div>
-            <div id="legal">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Legal Terms</a>
-                <a href="#">Credits</a>
-            </div>
-        </div>
-        <div id="footerNewsletter">
-            <p>Sign Up for Our Newsletter: </p>
-            <form>
-                <input type="email" name="email">
-                <button>Send</button>
-            </form>
-        </div>
-    </footer>
-	
-
+    
+    <article>
+        <img src="http://placehold.it/900x500" alt="Google Map Location">
+        <img src="http://placehold.it/60x60" alt="Logo">
+        <section>
+            <h3>Creative <span>Department</span></h3>
+            <p>1132 Main Street, OTR</p>
+            <p>Cincinnati, Ohio 45202, U.S.A.</p>
+            <p>p. 513-651-2901 &#183; f. 513-651-2902</p>
+            <a href="mailto:">info@creativedepartment.com</a>
+        </section>
+    </article>
+    
 	<!-- End Component -->
 	
 </body>
