--- a/components/9/component.html
+++ b/components/9/component.html
@@ -8,34 +8,49 @@
 <body>
 
 	<!-- Component -->
-    <div>
-        <h1>Razorfish New York</h1>
-        <p>1440 Broadway, 19th Floor, New York, NY 10018  &#43;1 212 798 6600</p>
-        <ul>
-            <li><a href="#">Email Us</a></li>
-            <li><a href="#">Contact Media Relations</a></li>
-            <li><a href="#">Contact Analyst Relations</a></li>
-        </ul>
-        <ul>
-            <li>
-                <h5>President, East Region</h5>
-                <em>Patrick Frend</em>
-            </li>
-            <li>
-                <h5>Managing Director</h5>
-                <em>Chris McNally</em>
-            </li>
-            <li>
-                <h5>Business Development</h5>
-                <em>Ryan Alderman</em>
-            </li>
-        </ul>
-    </div>
-    <div id="map">
-        <img src="/images/nyc_map.jpg" alt="Map">
-    </div>
-	
+    <article>
+        <section style="border-bottom: 1px solid #ccc">
+            <a href="#"><p>What's Hot and Recommended</p></a>
+            <a href="#"><img src="http://placehold.it/16x16" alt="Fire"></a>   
+        </section>
 
+        <section>
+            <a href="#"><img src="http://placehold.it/50x50" alt="Profile Picture"></a>
+            <h4><a href="#">Rohit Surya</a></h4>
+            <p><a href="#">Shared publicly</a> &#183; <a href="#">1&#58;03 PM</a></p>    
+        </section>
+
+        <section>
+            <p>For the past week I have been having some fun using <a href="#">+VSCO</a> app on my phone. The workflow is pretty simple. NFC the fine jpeg images from my camera to phone and edit. On this shit I used the A1 filter and tweaked it. Also bought the limited edition. Pretty neat set up.</p>
+            <a href="#">Read more (44 lines)</a><br>
+            <a href="#"><img src="http://placehold.it/400x300" alt="Posted Image"></a>
+        </section>
+
+        <section>
+            <button type="button">&#43;86</button>
+            <!-- will add image of arrow in future -->
+            <button type="button">&#45;&#45;&#62;5</button>
+            <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
+            <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
+            <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
+            <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
+        </section>
+
+        <section>
+            <a href="#">10 Comments</a>
+            <!-- will add image of down arrow in future -->
+            <a href="#">v</a>
+        </section>
+
+        <section>
+            <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
+            <h4><a href="#">Michelle Housen</a></h4>
+            <p>2&#58;44 PM</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras in tristique sem. Praesent varius sapien id elit volutpat maximus. Phasellus felis purus, condimentum in tempor quis, varius et lectus.</p>
+        </section>
+
+        <input type="text" name="comment" placeholder="Add a comment...">
+    </article>
 	<!-- End Component -->
 	
 </body>
