--- a/components/1/component.html
+++ b/components/1/component.html
@@ -12,11 +12,11 @@
     <nav>
         <img src="http://placehold.it/200x55" alt="Company Logo">
         <ul>
-            <li>About</li>
-            <li>Projects</li>
-            <li>Services</li>
-            <li>Blog</li>
-            <li>Contact</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     
