--- a/components/5/component.html
+++ b/components/5/component.html
@@ -10,26 +10,24 @@
 
 	<!-- Component -->
     
-    <article>
-        <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
-        <form>
-            First Name &#42;<br>
-            <input type="text" name="firstName"><br>
-            
-            Last Name &#42;<br>
-            <input type="text" name="lastName"><br>
-            
-            Email Address &#42;<br>
-            <input type="email" name="emailAddress"><br>
-            
-            Message &#42;<br>
-            <textarea cols="40" rows="10" name="message"></textarea><br>
-            
-            <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
-            
-            <button type="submit" value="Send Message">Send Message</button>
-        </form>
-    </article>
+    <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
+    <form>
+        First Name &#42;
+        <input type="text" name="firstName"><br>
+
+        Last Name &#42;
+        <input type="text" name="lastName"><br>
+
+        Email Address &#42;
+        <input type="email" name="emailAddress"><br>
+
+        Message &#42;
+        <textarea cols="40" rows="10" name="message"></textarea><br>
+
+        <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
+
+        <button type="submit" value="Send Message">Send Message</button>
+    </form>
     
 	<!-- End Component -->
 	
