--- a/components/6/component.html
+++ b/components/6/component.html
@@ -8,20 +8,20 @@
 <body>
 
 	<!-- Component -->
-    <header style="border-bottom: 1px solid #555;">
+    <header>
         <h1><a href="#">PoshCSS</a></h1>
         <h2>For the Modern Day Web Designer</h2>
     </header>
     
-    <div class="wrapper" style="border-top: 1px solid #555;">
-        <article style="border-bottom: 1px dashed #bbb;">
+    <div class="wrapper">
+        <article>
             <h3><a href="#">Spiffing CSS</a></h3>
             <p><a href="#">&#35;</a> Linked to 7 April 2012 in by Pat Dryburgh</p>
             <blockquote>Brits, take control of the web. Spiffing allows you to write your CSS and stylesheets in conformance to proper British English (also known as correct English) grammar and spelling regulations.</blockquote>
             <a href="#">Read more at spiffingcss.com →</a>
         </article>
         
-        <article style="border-bottom: 1px dashed #bbb;">
+        <article>
             <h3><a href="#">Pixel Perfect Tracking and Alignment</a></h3>
             <p><a href="#">&#35;</a> Linked to 11 March 2012 in <a href="#">Code</a> by Pat Dryburgh</p>
             <blockquote>When you open up your tracking, the text will always push out to the right as letter-spacing is applied from the left. As a result, if you’re centering your type, it will be a few pixels further to the right than it should be. <br><br>Taking care of this is simple, but easily overlooked. Just add a negative left margin that is equal to the value you assigned for letter-spacing..</blockquote>
