--- a/components/7/component.html
+++ b/components/7/component.html
@@ -13,10 +13,10 @@
     
     <form>
         Username
-        <a href="#">I forgot</a><br>
+        <a href="#">I forgot</a>
         <input type="text" name="username" placeholder="&#42;">
         <br>Password
-        <a href="#">I forgot</a><br>
+        <a href="#">I forgot</a>
         <input type="password" name="password" placeholder="&#42;">
         <label for="showPassword">
             <input type="checkbox" name="showPassword" id="showPassword">
@@ -27,7 +27,7 @@
         <label for="stayLoggedIn">
             <input type="checkbox" name="stayLoggedIn" id="stayLoggedIn">
             Stay logged in
-        </label><br>
+        </label>
         <a href="#">Create an account</a>
         &#183;
         <a href="#">Trouble logging in?</a>
