--- a/components/8/component.html
+++ b/components/8/component.html
@@ -9,17 +9,15 @@
 
 	<!-- Component -->
     
-    <article>
-        <img src="http://placehold.it/900x500" alt="Google Map Location">
-        <img src="http://placehold.it/60x60" alt="Logo">
-        <section>
-            <h3>Creative <span>Department</span></h3>
-            <p>1132 Main Street, OTR</p>
-            <p>Cincinnati, Ohio 45202, U.S.A.</p>
-            <p>p. 513-651-2901 &#183; f. 513-651-2902</p>
-            <a href="mailto:">info@creativedepartment.com</a>
-        </section>
-    </article>
+    <img src="http://placehold.it/900x500" alt="Google Map Location">
+    <img src="http://placehold.it/60x60" alt="Location">
+    <section>
+        <h3>Creative <span>Department</span></h3>
+        <p>1132 Main Street, OTR</p>
+        <p>Cincinnati, Ohio 45202, U.S.A.</p>
+        <p>p. 513-651-2901 &#183; f. 513-651-2902</p>
+        <a href="mailto:">info@creativedepartment.com</a>
+    </section>
     
 	<!-- End Component -->
 	
