--- a/components/9/component.html
+++ b/components/9/component.html
@@ -9,9 +9,9 @@
 
 	<!-- Component -->
     <article>
-        <section style="border-bottom: 1px solid #ccc">
+        <section>
             <a href="#"><p>What's Hot and Recommended</p></a>
-            <a href="#"><img src="http://placehold.it/16x16" alt="Fire"></a>   
+            <a href="#"><img src="http://placehold.it/16x16" alt="What's Hot"></a>   
         </section>
 
         <section>
