--- a/components/4/component.html
+++ b/components/4/component.html
@@ -9,12 +9,11 @@
 
 	<!-- Component -->
     
-    <img src="http://placehold.it/500x500" alt="Dog">
+    <!-- Will add images using CSS -->
     <h2>Keep Playing</h2>
     <h1>Hip &#38; Joint</h1>
     <p>Support Healthy Hip &#38; Joint Function</p>
     <h3>100&#37; USA sourced.</h3>
-    <img src="http://placehold.it/200x200" alt="Product Image">
     <a href="#">Purchase Now</a>
 
 	<!-- End Component -->
