--- a/components/5/component.html
+++ b/components/5/component.html
@@ -12,17 +12,17 @@
     
     <h4>Send Us A Note&#44; We&#39;ll Be In Touch.</h4>
     <form>
-        First Name &#42;
-        <input type="text" name="firstName"><br>
+        <p>First Name &#42;</p>
+        <input type="text" name="firstName">
 
-        Last Name &#42;
-        <input type="text" name="lastName"><br>
+        <p>Last Name &#42;</p>
+        <input type="text" name="lastName">
 
-        Email Address &#42;
-        <input type="email" name="emailAddress"><br>
+        <p>Email Address &#42;</p>
+        <input type="email" name="emailAddress">
 
-        Message &#42;
-        <textarea cols="40" rows="10" name="message"></textarea><br>
+        <p>Message &#42;</p>
+        <textarea cols="40" rows="10" name="message"></textarea>
 
         <div class="g-recaptcha" data-sitekey="6LdQ3QkTAAAAAN0vnBZvs3gAMVWYoRPvs9Vid8r6"></div>
 
