--- a/components/6/component.html
+++ b/components/6/component.html
@@ -24,7 +24,8 @@
         <article>
             <h3><a href="#">Pixel Perfect Tracking and Alignment</a></h3>
             <p><a href="#">&#35;</a> Linked to 11 March 2012 in <a href="#">Code</a> by Pat Dryburgh</p>
-            <blockquote>When you open up your tracking, the text will always push out to the right as letter-spacing is applied from the left. As a result, if you’re centering your type, it will be a few pixels further to the right than it should be. <br><br>Taking care of this is simple, but easily overlooked. Just add a negative left margin that is equal to the value you assigned for letter-spacing..</blockquote>
+            <blockquote>When you open up your tracking, the text will always push out to the right as letter-spacing is applied from the left. As a result, if you’re centering your type, it will be a few pixels further to the right than it should be.</blockquote>
+            <blockquote>Taking care of this is simple, but easily overlooked. Just add a negative left margin that is equal to the value you assigned for letter-spacing..</blockquote>
             <a href="#">Read more at spiffingcss.com →</a>
         </article>
     </div>
