--- a/components/7/component.html
+++ b/components/7/component.html
@@ -12,24 +12,23 @@
     <img src="http://placehold.it/150x150" alt="Mailchimp">
     
     <form>
-        Username
+        <p>Username</p>
         <a href="#">I forgot</a>
         <input type="text" name="username" placeholder="&#42;">
-        <br>Password
+        <p>Password</p>
         <a href="#">I forgot</a>
         <input type="password" name="password" placeholder="&#42;">
         <label for="showPassword">
             <input type="checkbox" name="showPassword" id="showPassword">
-            Show
+            <p>Show</p>
         </label>
-        <br>
         <button type="submit" value="log in">Log In</button>
         <label for="stayLoggedIn">
             <input type="checkbox" name="stayLoggedIn" id="stayLoggedIn">
-            Stay logged in
+            <p>Stay logged in</p>
         </label>
         <a href="#">Create an account</a>
-        &#183;
+        <p>&#183;</p>
         <a href="#">Trouble logging in?</a>
     </form>
 
