--- a/components/9/component.html
+++ b/components/9/component.html
@@ -22,14 +22,14 @@
 
         <section>
             <p>For the past week I have been having some fun using <a href="#">+VSCO</a> app on my phone. The workflow is pretty simple. NFC the fine jpeg images from my camera to phone and edit. On this shit I used the A1 filter and tweaked it. Also bought the limited edition. Pretty neat set up.</p>
-            <a href="#">Read more (44 lines)</a><br>
+            <a href="#">Read more (44 lines)</a>
             <a href="#"><img src="http://placehold.it/400x300" alt="Posted Image"></a>
         </section>
 
         <section>
             <button type="button">&#43;86</button>
             <!-- will add image of arrow in future -->
-            <button type="button">&#45;&#45;&#62;5</button>
+            <button type="button">→5</button>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
             <a href="#"><img src="http://placehold.it/30x30" alt="Profile Picture"></a>
