--- a/components/3/component.html
+++ b/components/3/component.html
@@ -9,12 +9,12 @@
 
 	<!-- Component -->
     <article>
-        <img src="http://placehold.it/500x500" alt="Person 1">
+        <!-- Image will be added using CSS -->
         <section class="name">
             <h3>Ryan Vanni</h3>
             <h4>CEO &#47; Founder</h4>
         </section>
-        <section class="links">
+        <section class="socialMediaLinks">
             <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
             <a href="#" title="instagram"><img src="http://placehold.it/50x50" alt="Instagram Icon"></a>
             <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
@@ -22,12 +22,12 @@
     </article>
     
     <article>
-        <img src="http://placehold.it/500x500" alt="Person 2">
+        <!-- Image will be added using CSS -->
         <section class="name">
             <h3>Robert Reinhard</h3>
             <h4>CTO</h4>
         </section>
-        <section class="links">
+        <section class="socialMediaLinks">
             <a href="#" title="facebook"><img src="http://placehold.it/50x50" alt="Facebook Icon"></a>
             <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
             <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
@@ -36,12 +36,12 @@
     </article>
     
     <article>
-        <img src="http://placehold.it/500x500" alt="Person 3">
+        <!-- Image will be added using CSS -->
         <section class="name">
             <h3>Jeff Toll</h3>
             <h4>Creative Director</h4>
         </section>
-        <section class="links">
+        <section class="socialMediaLinks">
             <a href="#" title="twitter"><img src="http://placehold.it/50x50" alt="Twitter Icon"></a>
             <a href="#" title="linkedin"><img src="http://placehold.it/50x50" alt="LinkedIn Icon"></a>
         </section>
